[GTK] Fix codec name in OWR ASSERT https://bugs.webkit.org/show_bug.cgi?id=170600

Reviewed by NOBODY (OOPS!).

Backported from the patch at Bugzilla

* platform/mediastream/openwebrtc/MediaEndpointOwr.cpp:
(WebCore::MediaEndpointOwr::prepareMediaSession):